--- a/_posts/AWS/2023-08-02-CH1.md
+++ b/_posts/AWS/2023-08-02-CH1.md
@@ -63,6 +63,8 @@ tags: [eks, 1장]
 
 ### 1.1. CloudFormation을 통한 기본 인프라 배포
 
+> Amazon S3 URL에 나오는 링크로 들어가 템플릿 파일 업로드로 업로드 해준다.
+
 [해당 링크](https://console.aws.amazon.com/cloudformation/home?region=ap-northeast-2#/stacks/new?stackName=myeks&templateURL=https:%2F%2Fdadaok.github.io%2Fassets%2Fyaml%2Fcnaeb_ch1_lab_1.yaml){:target="_blank"}를 클릭하면 AWS CloudFormation 페이지로 연결되며, 파라미터를 입력(키 페어, 작업 PC의 공인 IP 주소/32) 후 스택을 실행합니다.
 
 {: .box-note}
