--- a/_posts/AWS/2023-08-31-CH2-2.md
+++ b/_posts/AWS/2023-08-31-CH2-2.md
@@ -12,7 +12,7 @@ tags: [eks, 2장]
 <!--more-->
 <!-- Table of contents -->
 * this unordered seed list will be replaced by the toc
-  {:toc}
+{:toc}
 
 
 ## 1. 기본 네트워크 환경 확인
@@ -31,7 +31,8 @@ Amazon VPC CNI 구성 환경에서 기본적인 네트워크 정보를 확인합
 <br/>
 
 <span style='color:white; background-color:#404040'> **Daemonset 정보 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // kube-system의 daemonset 확인
 kubectl get daemonset -n kube-system
 
@@ -40,18 +41,19 @@ kubectl describe daemonset aws-node -n kube-system | grep Image | cut -d "/" -f 
 
 // kube-proxy config 확인
 kubectl describe cm -n kube-system kube-proxy-config
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **워커 노드 IP와 파드 IP 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 워커 노드 IP 확인
 aws ec2 describe-instances --query "Reservations[*].Instances[*].{PublicIPAdd:PublicIpAddress,PrivateIPAdd:PrivateIpAddress,InstanceName:Tags[?Key=='Name']|[0].Value,Status:State.Name}" --filters Name=instance-state-name,Values=running --output table
 
 // 파드 IP 확인
 kubectl get pod -n kube-system -o=custom-columns=NAME:.metadata.name,IP:.status.podIP,STATUS:.status.phase
-{% endhighlight %}
+```
 
 <br/><br/>
 
@@ -61,7 +63,8 @@ kubectl get pod -n kube-system -o=custom-columns=NAME:.metadata.name,IP:.status.
 <br/>
 
 <span style='color:white; background-color:#404040'> **워커 노드에 사용할 도구 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 //  3대의 워커노드의 Private IP 주소 변수 저장
 N1=$(kubectl get node --label-columns=topology.kubernetes.io/zone --selector=topology.kubernetes.io/zone=ap-northeast-2a -o jsonpath={.items[0].status.addresses[0].address})
 N2=$(kubectl get node --label-columns=topology.kubernetes.io/zone --selector=topology.kubernetes.io/zone=ap-northeast-2b -o jsonpath={.items[0].status.addresses[0].address})
@@ -77,12 +80,13 @@ ssh ec2-user@$N1 sudo yum install links tree jq tcpdump -y
 ssh ec2-user@$N2 sudo yum install links tree jq tcpdump -y
 
 ssh ec2-user@$N3 sudo yum install links tree jq tcpdump -y
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **워커 노드에 네트워크 정보 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 워커 노드 1에서 vpc-cni 정보 확인
 ssh ec2-user@$N1 tree /var/log/aws-routed-eni
 
@@ -97,7 +101,7 @@ ssh ec2-user@$N1 sudo ip -c route
 
 // coreDNS 파드 정보 확인
 kubectl get pod -n kube-system -l k8s-app=kube-dns -owide
-{% endhighlight %}
+```
 
 {: .box-note}
 **Note:** coreDNS 파드가 2개 생성되는데 어느 워커 노드에 생성될지 랜덤합니다. 영상에서는 워커 노드 1, 2에 배포되는 상황인데 혹시 다른 워커 노드에 배포되었다면 아래 실습부터 확인 대상의 워커 노드가 다를 수 있습니다.
@@ -113,7 +117,8 @@ kubectl get pod -n kube-system -l k8s-app=kube-dns -owide
 <br/>
 
 <span style='color:white; background-color:#404040'> **신규 터미널 3개에 워커 노드 모니터링 수행** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 워커 노드1의 모니터링
 ssh ec2-user@$N1
 
@@ -128,7 +133,7 @@ watch -d "ip link | egrep 'eth|eni' ;echo;echo "[ROUTE TABLE]"; route -n | grep 
 ssh ec2-user@$N3
 
 watch -d "ip link | egrep 'eth|eni' ;echo;echo "[ROUTE TABLE]"; route -n | grep eni"
-{% endhighlight %}
+```
 
 {: .box-note}
 **Note:** 신규 터미널을 3개 추가하고 작업용 인스턴스에 진입한 후 워커 노드 1, 2, 3으로 각각 SSH 접근을 합니다.
@@ -139,7 +144,8 @@ watch -d "ip link | egrep 'eth|eni' ;echo;echo "[ROUTE TABLE]"; route -n | grep 
 
 테스트용 파드는 간단한 디버깅이나 테스트를 수행하는 용도의 netshoot이라는 컨테이너 이미지를 사용합니다. [참고 링크: nicolaka/netshoot](https://github.com/nicolaka/netshoot){:target="_blank"}
 
-{% highlight javascript linenos %}
+
+```shell
 cat <<EOF | kubectl create -f -
 apiVersion: apps/v1
 kind: Deployment
@@ -162,24 +168,26 @@ spec:
         args: ["-f", "/dev/null"]
       terminationGracePeriodSeconds: 0
 EOF
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **테스트용 파드 이름 변수 저장** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 파드 이름을 변수에 저장
 PODNAME1=$(kubectl get pods -o custom-columns=:.metadata.name,PodIP:status.podIP | grep 192.168.1. | cut -c -29)
 
 PODNAME2=$(kubectl get pods -o custom-columns=:.metadata.name,PodIP:status.podIP | grep 192.168.2. | cut -c -29)
 
 PODNAME3=$(kubectl get pods -o custom-columns=:.metadata.name,PodIP:status.podIP | grep 192.168.3. | cut -c -29)
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **테스트용 파드 exec 접속 후 네트워크 정보 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 테스트용 파드 1에 zsh 접근
 kubectl exec -it $PODNAME1 -- zsh
 
@@ -194,7 +202,7 @@ kubectl exec -it $PODNAME3 -- ip -br -c addr
 kubectl exec -it $PODNAME1 -- ping -c 2 [POD-2_IP]
 
 kubectl exec -it $PODNAME1 -- ping -c 2 [POD-3_IP]
-{% endhighlight %}
+```
 
 <br/>
 
@@ -215,7 +223,8 @@ kubectl exec -it $PODNAME1 -- ping -c 2 [POD-3_IP]
 <br/>
 
 <span style='color:white; background-color:#404040'> **파드 IP 변수 지정** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 생성된 각 파드의 IP 주소를 변수로 지정
 PODIP1=$(kubectl get pods -o custom-columns=:.metadata.name,PodIP:status.podIP | grep 192.168.1. | cut -c 33-)
 
@@ -227,12 +236,13 @@ PODIP3=$(kubectl get pods -o custom-columns=:.metadata.name,PodIP:status.podIP |
 kubectl get pods -o custom-columns=PodNAME:.metadata.name,PodIP:status.podIP
 
 echo $PODIP1, $PODIP2, $PODIP3
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **신규 터미널 3개에 tcpdump 수행** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 워커 노드1의 모든 인터페이스에 tcpdump
 ssh ec2-user@$N1
 
@@ -247,12 +257,13 @@ sudo tcpdump -i any -nn icmp
 ssh ec2-user@$N3
 
 sudo tcpdump -i any -nn icmp
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **파드 간 ping 테스트** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 파드1에서 파드2로 ping
 kubectl exec -it $PODNAME1 -- ping -c 2 $PODIP2
 
@@ -261,12 +272,13 @@ kubectl exec -it $PODNAME1 -- ping -c 2 $PODIP3
 
 // 파드2에서 파드3으로 ping
 kubectl exec -it $PODNAME2 -- ping -c 2 $PODIP3
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **파드와 노드의 라우팅 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 파드 1에서 라우팅 확인
 kubectl exec -it $PODNAME1 -- ip -br addr
 
@@ -276,7 +288,7 @@ kubectl exec -it $PODNAME1 -- ip route show table main
 ssh ec2-user@$N1 sudo ip route show table main
 
 ssh ec2-user@$N3 sudo ip route show table main
-{% endhighlight %}
+```
 
 <br/>
 
@@ -288,39 +300,43 @@ ssh ec2-user@$N3 sudo ip route show table main
 
 <span style='color:white; background-color:#404040'> **신규 터미널에 tcpdump 수행** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 워커 노드1의 모든 인터페이스에 tcpdump
 ssh ec2-user@$N1
 
 sudo tcpdump -i any -nn icmp
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **파드 1에서 외부 인터넷 통신** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // google.com으로 ping
 kubectl exec -it $PODNAME1 -- ping -c 1 www.google.com
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **파드와 워커 노드의 공인 IP 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 파드 1의 공인 IP 주소 확인
 kubectl exec -it $PODNAME1 -- curl -s ipinfo.io/ip ; echo
 
 // 워커 노드 1의 공인 IP 주소 확인
 ssh ec2-user@$N1 curl -s ipinfo.io/ip ; echo
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **워커 노드 1의 NAT 테이블 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 워커 노드 1에서 NAT 테이블 확인
 ssh ec2-user@$N1 sudo iptables -L -n -v -t nat
 
@@ -328,7 +344,7 @@ ssh ec2-user@$N1 sudo iptables -L -n -v -t nat
 ssh ec2-user@$N1 sudo iptables -t nat -S
 
 ssh ec2-user@$N1 sudo iptables -t nat -S | grep 'A AWS-SNAT-CHAIN'
-{% endhighlight %}
+```
 
 <br/>
 
@@ -339,9 +355,10 @@ ssh ec2-user@$N1 sudo iptables -t nat -S | grep 'A AWS-SNAT-CHAIN'
 
 <span style='color:white; background-color:#404040'> **테스트용 파드 삭제** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 kubectl delete deploy netshoot-pod
-{% endhighlight %}
+```
 
 <br/>
 
@@ -365,7 +382,8 @@ kubectl delete deploy netshoot-pod
 <br/>
 
 <span style='color:white; background-color:#404040'> **kube-ops-view 설치** </span>
-{% highlight javascript linenos %}
+
+```shell
 // kube-ops-view 설치
 helm repo add geek-cookbook https://geek-cookbook.github.io/charts/
 
@@ -375,7 +393,7 @@ kubectl patch svc -n kube-system kube-ops-view -p '{"spec":{"type":"LoadBalancer
 
 // kube-ops-view 접속 URL 확인 (1.5 배율)
 kubectl get svc -n kube-system kube-ops-view -o jsonpath={.status.loadBalancer.ingress[0].hostname} | awk '{ print "KUBE-OPS-VIEW URL = http://"$1":8080/#scale=1.5"}'
-{% endhighlight %}
+```
 
 {: .box-note}
 **Note:** 위 출력되는 kube-ops-view URL로 인터넷 브라우저에서 접속합니다.
@@ -387,7 +405,8 @@ kubectl get svc -n kube-system kube-ops-view -o jsonpath={.status.loadBalancer.i
 <br/>
 
 <span style='color:white; background-color:#404040'> **워커 노드의 인스턴스 정보 확인** </span>
-{% highlight javascript linenos %}
+
+```shell
 // t3 타입의 인스턴스 정보 (최대 ENI 수량, 최대 IP 수량)
 aws ec2 describe-instance-types --filters Name=instance-type,Values=t3.* \
  --query "InstanceTypes[].{Type: InstanceType, MaxENI: NetworkInfo.MaximumNetworkInterfaces, IPv4addr: NetworkInfo.Ipv4AddressesPerInterface}" \
@@ -400,12 +419,13 @@ aws ec2 describe-instance-types --filters Name=instance-type,Values=m5.* \
 
 // 워커 노드의 상세 정보 확인 (Allocatable - pods)
 kubectl describe node | grep Allocatable: -A7
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **최대 파드 생성 관련 모니터링(신규 터미널 2개)** </span>
-{% highlight javascript linenos %}
+
+```shell
 // 신규 터미널 1 - 워커 노드 1에서 인터페이스 정보 모니터링
 ssh ec2-user@$N1
 
@@ -413,12 +433,13 @@ while true; do ip -br -c addr show && echo "--------------" ; date "+%Y-%m-%d %H
 
 // 신규 터미널 2 - 작업용 인스턴스에서 파드 정보 모니터링
 watch -d 'kubectl get pods -o wide'
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **최대 파드 생성 작업** </span>
-{% highlight javascript linenos %}
+
+```shell
 // 디플로이먼트 생성 (최초 2대)
 curl -s -O https://raw.githubusercontent.com/cloudneta/cnaeblab/master/_data/nginx-dp.yaml
 
@@ -435,26 +456,28 @@ kubectl scale deployment nginx-deployment --replicas=3
 
 // 파드 수량 50대로 변경 (replicas)
 kubectl scale deployment nginx-deployment --replicas=50
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **파드 초과 생성으로 대기 중인 파드 확인** </span>
-{% highlight javascript linenos %}
+
+```shell
 // 대기 중인 파드 확인
 kubectl get pods | grep Pending
 
 // 대기 중인 파드 지정하여 정보 확인
 kubectl describe pod [대기 파드 이름]
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **디플로이먼트 삭제** </span>
-{% highlight javascript linenos %}
+
+```shell
 // 디플로이먼트 삭제
 kubectl delete deploy nginx-deployment
-{% endhighlight %}
+```
 
 <br/>
 
