--- a/_posts/AWS/2023-09-10-CH3-3.md
+++ b/_posts/AWS/2023-09-10-CH3-3.md
@@ -12,7 +12,7 @@ tags: [eks, 3장]
 <!--more-->
 <!-- Table of contents -->
 * this unordered seed list will be replaced by the toc
-  {:toc}
+{:toc}
 
 
 ## 1. Amazon EFS CSI Driver 설치
@@ -30,14 +30,16 @@ tags: [eks, 3장]
 <br/>
 
 <span style='color:white; background-color:#404040'> **Default 네임 스페이스 변경** </span>  
-{% highlight javascript linenos %}
+
+```shell
 kubectl ns default
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **워커 노드의 IP 변수 선언** </span>  
-{% highlight javascript linenos %}
+
+```shell
 N1=$(kubectl get node --label-columns=topology.kubernetes.io/zone --selector=topology.kubernetes.io/zone=ap-northeast-2a -o jsonpath={.items[0].status.addresses[0].address})
 
 N2=$(kubectl get node --label-columns=topology.kubernetes.io/zone --selector=topology.kubernetes.io/zone=ap-northeast-2b -o jsonpath={.items[0].status.addresses[0].address})
@@ -49,35 +51,38 @@ echo "export N1=$N1" >> /etc/profile
 echo "export N2=$N2" >> /etc/profile
 
 echo "export N3=$N3" >> /etc/profile
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **노드에 Tool 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 ssh ec2-user@$N1 sudo yum install links tree jq tcpdump sysstat -y
 
 ssh ec2-user@$N2 sudo yum install links tree jq tcpdump sysstat -y
 
 ssh ec2-user@$N3 sudo yum install links tree jq tcpdump sysstat -y
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **EFS 마운트 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 df -hT --type nfs4
 
 // 만약 마운트가 되지 않는다면.. 수동으로 마운트
 EFS_ID=$(aws efs describe-file-systems --query "FileSystems[?Name=='myeks-EFS'].[FileSystemId]" --output text); echo $EFS_ID
 
 mount -t nfs4 -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport $EFS_ID.efs.ap-northeast-2.amazonaws.com:/ /mnt/myefs
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **AWS Load Balancer Controller 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 helm repo add eks https://aws.github.io/eks-charts
 
 helm repo update
@@ -85,12 +90,13 @@ helm repo update
 helm install aws-load-balancer-controller eks/aws-load-balancer-controller -n kube-system --set clusterName=$CLUSTER_NAME \
   --set serviceAccount.create=false \
   --set serviceAccount.name=aws-load-balancer-controller
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **ExternalDNS 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 자신의 도메인 주소로 설정
 MyDomain=<자신의 도메인>
 
@@ -101,12 +107,13 @@ echo $MyDomain, $MyDnsHostedZoneId
 curl -s -O https://raw.githubusercontent.com/cloudneta/cnaeblab/master/_data/externaldns.yaml
 
 MyDomain=$MyDomain MyDnsHostedZoneId=$MyDnsHostedZoneId envsubst < externaldns.yaml | kubectl apply -f -
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **kube-ops-view 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 helm repo add geek-cookbook https://geek-cookbook.github.io/charts/
 
 helm install kube-ops-view geek-cookbook/kube-ops-view --version 1.2.2 --set env.TZ="Asia/Seoul" --namespace kube-system
@@ -116,7 +123,7 @@ kubectl patch svc -n kube-system kube-ops-view -p '{"spec":{"type":"LoadBalancer
 kubectl annotate service kube-ops-view -n kube-system "external-dns.alpha.kubernetes.io/hostname=kubeopsview.$MyDomain"
 
 echo -e "Kube Ops View URL = http://kubeopsview.$MyDomain:8080/#scale=1.5"
-{% endhighlight %}
+```
 
 <br/>
 
@@ -134,19 +141,21 @@ Amazon EFS CSI Driver의 권한을 위임하기 위한 인증 절차로 IRSA 구
 <br/>
 
 <span style='color:white; background-color:#404040'> **Amazon EBS CFI Driver 버전 정보** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // Amazon EFS CSI Driver 버전 정보 (True = 기본 설치 버전)
 aws eks describe-addon-versions \
     --addon-name aws-efs-csi-driver \
     --kubernetes-version 1.26 \
     --query "addons[].addonVersions[].[addonVersion, compatibilities[].defaultVersion]" \
     --output text
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **IRSA 생성** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // AWS 관리형 IAM Policy인 AmazonEFSCSIDriverPolicy 사용
 eksctl create iamserviceaccount \
   --name efs-csi-controller-sa \
@@ -159,17 +168,18 @@ eksctl create iamserviceaccount \
 
 // IRSA 확인
 eksctl get iamserviceaccount --cluster ${CLUSTER_NAME}
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **Amazon EFS CSI Driver Add-On 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 eksctl create addon --name aws-efs-csi-driver\
  --cluster ${CLUSTER_NAME}\
  --service-account-role-arn arn:aws:iam::${ACCOUNT_ID}:role/AmazonEKS_EFS_CSI_DriverRole\
  --force
-{% endhighlight %}
+```
 
 <br/><br/>
 
@@ -179,27 +189,30 @@ eksctl create addon --name aws-efs-csi-driver\
 <br/>
 
 <span style='color:white; background-color:#404040'> **Amazon EKS 클러스터 Add-On 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 eksctl get addon --cluster ${CLUSTER_NAME}
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **Amazon EFS CSI Driver 설치 자원 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 kubectl get pod -n kube-system -l "app.kubernetes.io/name=aws-efs-csi-driver,app.kubernetes.io/instance=aws-efs-csi-driver"
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **Amazon EFS CSI Driver의 컨테이너 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // efs-csi-controller 파드에 컨테이너 확인
 kubectl get pod -n kube-system -l app=efs-csi-controller -o jsonpath='{.items[0].spec.containers[*].name}' ; echo
 
 // efs-csi-node 데몬셋에 컨테이너 확인
 kubectl get daemonset -n kube-system -l app.kubernetes.io/name=aws-efs-csi-driver -o jsonpath='{.items[0].spec.template.spec.containers[*].name}' ; echo
-{% endhighlight %}
+```
 
 
 <br/>
@@ -221,26 +234,29 @@ Amazon EFS CSI Driver 환경에서 동적 프로비저닝을 구성합니다.
 <br/>
 
 <span style='color:white; background-color:#404040'> **신규 터미널 - 모니터링** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 신규 터미널 1 - pod, pv, pvc, sc 모니터링
 watch 'kubectl get pv,pvc,pod; echo; kubectl get sc efs-dp-sc'
 
 // 신규 터미널 2 - 파일 시스템의 액세스 포인트 확인
 while true; do aws efs describe-access-points --query "AccessPoints[*].AccessPointId"  --output text; date; sleep 1; done
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **EFS 파일 시스템 ID 변수 선언** </span>
-{% highlight javascript linenos %}
+
+```shell
 EFS_ID=$(aws efs describe-file-systems --query "FileSystems[?Name=='myeks-EFS'].[FileSystemId]" --output text); echo $EFS_ID
-{% endhighlight %}
+```
 
 <br/>
 
 
 <span style='color:white; background-color:#404040'> **StorageClass 생성** </span>
-{% highlight javascript linenos %}
+
+```shell
 // yaml 파일 다운로드 및 확인
 curl -s -O https://raw.githubusercontent.com/cloudneta/cnaeblab/master/_data/efs_dp_sc.yaml
 
@@ -254,12 +270,13 @@ kubectl apply -f efs_dp_sc.yaml
 
 // StorageClass 확인
 kubectl describe sc efs-dp-sc | yh
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **PVC와 파드 생성** </span>
-{% highlight javascript linenos %}
+
+```shell
 // yaml 파일 다운로드 및 확인
 curl -s -O https://raw.githubusercontent.com/cloudneta/cnaeblab/master/_data/efs_dp_pvc_pod.yaml
 
@@ -267,7 +284,7 @@ cat efs_dp_pvc_pod.yaml | yh
 
 // PVC와 파드 생성
 kubectl apply -f efs_dp_pvc_pod.yaml
-{% endhighlight %}
+```
 
 <br/>
 
@@ -277,15 +294,17 @@ kubectl apply -f efs_dp_pvc_pod.yaml
 
 <span style='color:white; background-color:#404040'> **efs-csi-controller의 provisioner 로그 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 kubectl logs -n kube-system -l app=efs-csi-controller -c csi-provisioner -f
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **데이터 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 파드에서 마운트 대상의 디스크 사용 확인
 kubectl exec -it efs-dp-app -- sh -c 'df -hT --type=nfs4'
 
@@ -296,16 +315,17 @@ kubectl exec efs-dp-app -- tail -f /data/out.txt
 df -hT --type=nfs4
 
 tree /mnt/myefs
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **실습 종료 후 자원 삭제** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 파드, PVC, StorageClass 삭제
 kubectl delete -f efs_dp_pvc_pod.yaml && kubectl delete -f efs_dp_sc.yaml
-{% endhighlight %}
+```
 
 <br/>
 
