--- a/_posts/AWS/2023-09-13-CH3-4.md
+++ b/_posts/AWS/2023-09-13-CH3-4.md
@@ -12,7 +12,7 @@ tags: [eks, 3장]
 <!--more-->
 <!-- Table of contents -->
 * this unordered seed list will be replaced by the toc
-  {:toc}
+{:toc}
 
 
 ## 1. Amazon ECR Public Repository 생성 및 사용
@@ -30,9 +30,10 @@ tags: [eks, 3장]
 <br/>
 
 <span style='color:white; background-color:#404040'> **Default 네임 스페이스 변경** </span>  
-{% highlight javascript linenos %}
+
+```shell
 kubectl ns default
-{% endhighlight %}
+```
 
 <br/>
 
@@ -46,42 +47,46 @@ kubectl ns default
 <br/>
 
 <span style='color:white; background-color:#404040'> **Public Registry 인증** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // Public Registry 인증 - 버지니아 북부 리전
 aws ecr-public get-login-password \
   --region us-east-1 | docker login --username AWS \
   --password-stdin public.ecr.aws
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **Public Registry 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // Public Registry 확인 - 버지니아 북부 리전
 aws ecr-public describe-registries --region us-east-1 | jq
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **Public Repository 생성** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 각자의 NICKNAME 변수 선언
 NICKNAME=ongja
 
 // Public Repository 생성
 aws ecr-public create-repository --repository-name $NICKNAME/nginx --region us-east-1
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **Public Repository 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // Public Repository 확인
 aws ecr-public describe-repositories --region us-east-1 | jq
 
 // Public Repository URI를 변수로 선언
 REPOURI=$(aws ecr-public describe-repositories --region us-east-1 | jq -r .repositories[].repositoryUri) ; echo $REPOURI
-{% endhighlight %}
+```
 
 <br/><br/>
 
@@ -91,7 +96,8 @@ REPOURI=$(aws ecr-public describe-repositories --region us-east-1 | jq -r .repos
 <br/>
 
 <span style='color:white; background-color:#404040'> **이미지 Pull & Tag** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 이미지 다운로드와 확인
 docker pull nginx:alpine
 
@@ -101,26 +107,28 @@ docker images
 docker tag nginx:alpine $REPOURI:latest
 
 docker images
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **이미지 Push** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // Public Repository로 이미지 업로드
 docker push $REPOURI:latest
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **파드 실행 및 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // Public Repository에 이미지를 사용한 파드 생성
 kubectl run mynginx --image $REPOURI
 
 // 생성된 파드 확인
 kubectl get pod
-{% endhighlight %}
+```
 
 
 <br/><br/>
@@ -131,29 +139,32 @@ kubectl get pod
 <br/>
 
 <span style='color:white; background-color:#404040'> **파드 삭제** </span>  
-{% highlight javascript linenos %}
+
+```shell
 kubectl delete pod mynginx
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **Public Repository 이미지 삭제** </span>  
-{% highlight javascript linenos %}
+
+```shell
 aws ecr-public batch-delete-image \
       --repository-name $NICKNAME/nginx \
       --image-ids imageTag=latest \
       --region us-east-1
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **Public Repository 삭제** </span>  
-{% highlight javascript linenos %}
+
+```shell
 aws ecr-public delete-repository \
   --repository-name $NICKNAME/nginx \
   --force \
   --region us-east-1
-{% endhighlight %}
+```
 
 <br/>
 
@@ -170,17 +181,19 @@ aws ecr-public delete-repository \
 <br/>
 
 <span style='color:white; background-color:#404040'> **kube-ops-view 삭제** </span>  
-{% highlight javascript linenos %}
+
+```shell
 helm uninstall kube-ops-view -n kube-system
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **Amazon EKS 원클릭 배포 삭제** </span>
-{% highlight javascript linenos %}
+
+```shell
 eksctl delete cluster --name $CLUSTER_NAME \
   && aws cloudformation delete-stack --stack-name $CLUSTER_NAME
-{% endhighlight %}
+```
 
 <br/>
 
