--- a/_posts/AWS/2023-09-18-CH4-3.md
+++ b/_posts/AWS/2023-09-18-CH4-3.md
@@ -12,7 +12,7 @@ tags: [eks, 4장]
 <!--more-->
 <!-- Table of contents -->
 * this unordered seed list will be replaced by the toc
-  {:toc}
+{:toc}
 
 
 ## 1. 프로메테우스 스택 설치
@@ -30,14 +30,16 @@ tags: [eks, 4장]
 <br/>
 
 <span style='color:white; background-color:#404040'> **Default 네임 스페이스 변경** </span>  
-{% highlight javascript linenos %}
+
+```shell
 kubectl ns default
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **워커 노드의 IP 변수 선언** </span>  
-{% highlight javascript linenos %}
+
+```shell
 N1=$(kubectl get node --label-columns=topology.kubernetes.io/zone --selector=topology.kubernetes.io/zone=ap-northeast-2a -o jsonpath={.items[0].status.addresses[0].address})
 
 N2=$(kubectl get node --label-columns=topology.kubernetes.io/zone --selector=topology.kubernetes.io/zone=ap-northeast-2b -o jsonpath={.items[0].status.addresses[0].address})
@@ -49,19 +51,21 @@ echo "export N1=$N1" >> /etc/profile
 echo "export N2=$N2" >> /etc/profile
 
 echo "export N3=$N3" >> /etc/profile
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **노드에 SSH 접근** </span>  
-{% highlight javascript linenos %}
+
+```shell
 for node in $N1 $N2 $N3; do ssh ec2-user@$node hostname; done
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **AWS Load Balancer Controller 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 helm repo add eks https://aws.github.io/eks-charts
 
 helm repo update
@@ -69,12 +73,13 @@ helm repo update
 helm install aws-load-balancer-controller eks/aws-load-balancer-controller -n kube-system --set clusterName=$CLUSTER_NAME \
   --set serviceAccount.create=false \
   --set serviceAccount.name=aws-load-balancer-controller
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **ExternalDNS 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 자신의 도메인 주소로 설정
 MyDomain=<자신의 도메인>
 
@@ -85,12 +90,13 @@ echo $MyDomain, $MyDnsHostedZoneId
 curl -s -O https://raw.githubusercontent.com/cloudneta/cnaeblab/master/_data/externaldns.yaml
 
 MyDomain=$MyDomain MyDnsHostedZoneId=$MyDnsHostedZoneId envsubst < externaldns.yaml | kubectl apply -f -
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **kube-ops-view 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 helm repo add geek-cookbook https://geek-cookbook.github.io/charts/
 
 helm install kube-ops-view geek-cookbook/kube-ops-view --version 1.2.2 --set env.TZ="Asia/Seoul" --namespace kube-system
@@ -100,12 +106,13 @@ kubectl patch svc -n kube-system kube-ops-view -p '{"spec":{"type":"LoadBalancer
 kubectl annotate service kube-ops-view -n kube-system "external-dns.alpha.kubernetes.io/hostname=kubeopsview.$MyDomain"
 
 echo -e "Kube Ops View URL = http://kubeopsview.$MyDomain:8080/#scale=1.5"
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **StorageClass 생성** </span>  
-{% highlight javascript linenos %}
+
+```shell
 cat <<EOT > gp3-sc.yaml
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
@@ -121,14 +128,15 @@ parameters:
 EOT
 
 kubectl apply -f gp3-sc.yaml
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **ACM 인증서 변수 선언** </span>  
-{% highlight javascript linenos %}
+
+```shell
 CERT_ARN=`aws acm list-certificates --query 'CertificateSummaryList[].CertificateArn[]' --output text`; echo $CERT_ARN
-{% endhighlight %}
+```
 
 <br/>
 
@@ -142,7 +150,8 @@ CERT_ARN=`aws acm list-certificates --query 'CertificateSummaryList[].Certificat
 <br/>
 
 <span style='color:white; background-color:#404040'> **신규터미널 - 네임 스페이스 추가 및 모니터링** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // monitoring 네임 스페이스 추가
 kubectl create ns monitoring
 
@@ -150,20 +159,22 @@ kubectl get ns
 
 // 신규 터미널 - pod, svc, ingress, pv, pvc 모니터링
 watch kubectl get pod,svc,ingress,pv,pvc -n monitoring
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **helm repo 추가** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // helm chart repository 추가
 helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **프로메테우스 스택 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 파라미터 파일 다운로드 및 확인
 curl -s -O https://raw.githubusercontent.com/cloudneta/cnaeblab/master/_data/monitor-values.yaml
 
@@ -177,7 +188,7 @@ envsubst < monitor-values.yaml | helm install kube-prometheus-stack prometheus-c
   --set prometheus.prometheusSpec.scrapeInterval='15s' \
   --set prometheus.prometheusSpec.evaluationInterval='15s' \
   -f - --namespace monitoring
-{% endhighlight %}
+```
 
 <br/><br/>
 
@@ -187,18 +198,20 @@ envsubst < monitor-values.yaml | helm install kube-prometheus-stack prometheus-c
 <br/>
 
 <span style='color:white; background-color:#404040'> **helm list와 설치된 모든 자원 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // monitoring 네임 스페이스에 helm list 확인
 helm list -n monitoring
 
 // monitoring 네임 스페이스에 모든 자원 확인
 kubectl get-all -n monitoring
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **sts, ds, deloy 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // monitoring 네임 스페이스에 sts, ds, deploy 확인
 kubectl get sts,ds,deploy -n monitoring
 
@@ -207,19 +220,20 @@ kubectl describe sts -n monitoring
 
 // daemonset 상세 정보
 kubectl describe ds -n monitoring
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **crd, servicemonitors, targetgroupbindings 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // monitoring 네임 스페이스에 sts, ds, deploy 확인
 kubectl get crd | grep monitoring
 
 kubectl get servicemonitors -n monitoring
 
 kubectl get targetgroupbindings -n monitoring
-{% endhighlight %}
+```
 
 <br/>
 
@@ -239,18 +253,20 @@ kubectl get targetgroupbindings -n monitoring
 <br/>
 
 <span style='color:white; background-color:#404040'> **node-exporter 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // node-exporter의 포트 정보
 kubectl describe ds -n monitoring | grep Port
 
 // node-exporter의 서비스와 엔드포인트 확인
 kubectl get svc,ep -n monitoring kube-prometheus-stack-prometheus-node-exporter
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **모니터링 대상별 /metrics 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // node-export - 노드에서 localhost로 9100 포트에 /metrics 접속
 ssh ec2-user@$N1 curl -s localhost:9100/metrics | tail
 
@@ -264,7 +280,7 @@ echo ">>>default NS<<<"; kubectl get ep
 
 // kube-proxy - 노드에서 localhost로 10249 포트에 /metrics 접속
 ssh ec2-user@$N1 curl -s localhost:10249/metrics | tail
-{% endhighlight %}
+```
 
 <br/>
 
@@ -276,7 +292,8 @@ ssh ec2-user@$N1 curl -s localhost:10249/metrics | tail
 
 <span style='color:white; background-color:#404040'> **프로메테우스 ingress 정보 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 프로메테우스 ingress 정보 확인
 kubectl get ingress -n monitoring kube-prometheus-stack-prometheus
 
@@ -284,7 +301,7 @@ kubectl describe ingress -n monitoring kube-prometheus-stack-prometheus
 
 // 프로메테우스 ingress 도메인으로 웹 접속
 echo -e "Prometheus Web URL = https://prometheus.$MyDomain"
-{% endhighlight %}
+```
 
 <br/>
 
@@ -299,7 +316,8 @@ echo -e "Prometheus Web URL = https://prometheus.$MyDomain"
 
 <span style='color:white; background-color:#404040'> **프로메테우스 설정 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 프로메테우스 설정 파일 확인
 kubectl exec -it -n monitoring sts/prometheus-kube-prometheus-stack-prometheus \
   -- cat /etc/prometheus/config_out/prometheus.env.yaml
@@ -314,25 +332,27 @@ kubectl exec -it -n monitoring sts/prometheus-kube-prometheus-stack-prometheus \
 
 // 엔드포인트 확인
 kubectl get ep -n monitoring;  kubectl get ep -n kube-system
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **노드 그룹의 보안 그룹 수정** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 보안 그룹 ID 지정
 NGSGID=$(aws ec2 describe-security-groups --filters Name=group-name,Values='*ng1*' --query "SecurityGroups[*].[GroupId]" --output text)
 
 // 작업용 인스턴스의 모든 트래픽 허용
 aws ec2 authorize-security-group-ingress --group-id $NGSGID --protocol '-1' --cidr 192.168.1.100/32
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **PromQL 예시** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 전체 클러스터 노드의 CPU 사용량 평균
 1- avg(rate(node_cpu_seconds_total{mode="idle"}[1m]))
 
@@ -341,7 +361,7 @@ avg(process_resident_memory_bytes{job="apiserver"})
 
 // node-export 스크랩 기간
 scrape_duration_seconds{job="node-exporter"}
-{% endhighlight %}
+```
 
 <br/>
 
@@ -358,7 +378,8 @@ scrape_duration_seconds{job="node-exporter"}
 <br/>
 
 <span style='color:white; background-color:#404040'> **그라파나 정보 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 그라파나 버전 확인
 kubectl exec -it -n monitoring deploy/kube-prometheus-stack-grafana -- grafana-cli --version
 
@@ -367,7 +388,7 @@ kubectl get ingress -n monitoring kube-prometheus-stack-grafana
 
 // ingress 도메인으로 웹 접속 : 기본 계정 - admin / prom-operator
 echo -e "Grafana Web URL = https://grafana.$MyDomain"
-{% endhighlight %}
+```
 
 <br/>
 
@@ -395,16 +416,18 @@ echo -e "Grafana Web URL = https://grafana.$MyDomain"
 
 <span style='color:white; background-color:#404040'> **프로메테우스 접근 정보 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 프로메테우스의 서비스와 엔드포인트 주소 확인
 kubectl get svc,ep -n monitoring kube-prometheus-stack-prometheus
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **테스트용 파드를 배포하고 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 테스트용 파드 배포
 cat <<EOF | kubectl create -f -
 apiVersion: v1
@@ -422,27 +445,29 @@ EOF
 
 // 생성된 파드 확인
 kubectl get pod netshoot-pod
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **테스트용 파드에서 프로메테우스 주소 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 프로메테우스 접속 주소로 nslookup 확인
 kubectl exec -it netshoot-pod -- nslookup kube-prometheus-stack-prometheus.monitoring
 
 // 프로메테우스 접속 주소로 그래프 경로 접근
 kubectl exec -it netshoot-pod -- curl -s kube-prometheus-stack-prometheus.monitoring:9090/graph -v ; echo
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **테스트용 파드 삭제** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 kubectl delete pod netshoot-pod
-{% endhighlight %}
+```
 
 <br/>
 
@@ -496,15 +521,17 @@ kubectl delete pod netshoot-pod
 
 <span style='color:white; background-color:#404040'> **helm repository 추가** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 helm repo add bitnami https://charts.bitnami.com/bitnami
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **NGINX 파라미터 파일 생성** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // nginx 파라미터 파일 생성
 cat <<EOT > nginx-values.yaml
 service:
@@ -538,19 +565,20 @@ metrics:
 EOT
 
 cat nginx-values.yaml | yh
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **NGINX 배포 및 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // nginx 배포
 helm install nginx bitnami/nginx --version 14.1.0 -f nginx-values.yaml
 
 // 파드, 서비스, 엔드포인트 확인
 kubectl get pod,svc,ep
-{% endhighlight %}
+```
 
 <br/>
 
@@ -561,7 +589,8 @@ kubectl get pod,svc,ep
 
 <span style='color:white; background-color:#404040'> **서비스 모니터 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 서비스 모니터 확인
 kubectl get servicemonitor -n monitoring
 
@@ -570,13 +599,14 @@ kubectl get servicemonitor nginx -n monitoring -o json | jq
 
 // 파드, 서비스, 엔드포인트 확인
 kubectl get pod,svc,ep
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **NGINX 메트릭 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // NGINX IP 변수 선언
 NGINXIP=$(kubectl get pod -l app.kubernetes.io/instance=nginx -o jsonpath={.items[0].status.podIP}); echo $NGINXIP
 
@@ -584,13 +614,14 @@ NGINXIP=$(kubectl get pod -l app.kubernetes.io/instance=nginx -o jsonpath={.item
 curl -s http://$NGINXIP:9113/metrics
 
 curl -s http://$NGINXIP:9113/metrics | grep ^nginx_connections_active
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **NGINX 접속** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // NGINX 1회 접속
 curl -s https://nginx.$MyDomain
 
@@ -599,7 +630,7 @@ while true; do curl -s https://nginx.$MyDomain -I | head -n 1; date; sleep 1; do
 
 // NGINX 메트릭 확인 - nginx_connections_active
 curl -s http://$NGINXIP:9113/metrics | grep ^nginx_connections_active
-{% endhighlight %}
+```
 
 <br/>
 
@@ -616,12 +647,13 @@ curl -s http://$NGINXIP:9113/metrics | grep ^nginx_connections_active
 
 <span style='color:white; background-color:#404040'> **NGINX 부하 발생** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 yum install -y httpd
 
 // 100회씩 총 1000회 접속 수행
 ab -c 100 -n 1000 https://nginx.$MyDomain/
-{% endhighlight %}
+```
 
 <br/>
 
@@ -639,7 +671,8 @@ ab -c 100 -n 1000 https://nginx.$MyDomain/
 
 <span style='color:white; background-color:#404040'> **실습 종료 후 자원 삭제** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // helm chart 삭제
 helm uninstall -n kube-system kube-ops-view
 
@@ -652,7 +685,7 @@ kubectl delete pvc prometheus-kube-prometheus-stack-prometheus-db-prometheus-kub
 
 // Amazon EKS 원클릭 배포 삭제
 eksctl delete cluster --name $CLUSTER_NAME && aws cloudformation delete-stack --stack-name $CLUSTER_NAME
-{% endhighlight %}
+```
 
 <br/>
 
