--- a/_posts/AWS/2023-09-22-CH5-2.md
+++ b/_posts/AWS/2023-09-22-CH5-2.md
@@ -11,7 +11,7 @@ tags: [eks, 5장]
 <!--more-->
 <!-- Table of contents -->
 * this unordered seed list will be replaced by the toc
-  {:toc}
+{:toc}
 
 
 ## 1. HPA 환경 구성 및 동작 확인
@@ -29,14 +29,16 @@ tags: [eks, 5장]
 <br/>
 
 <span style='color:white; background-color:#404040'> **Default 네임 스페이스 변경** </span>  
-{% highlight javascript linenos %}
+
+```shell
 kubectl ns default
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **워커 노드의 IP 변수 선언** </span>  
-{% highlight javascript linenos %}
+
+```shell
 N1=$(kubectl get node --label-columns=topology.kubernetes.io/zone --selector=topology.kubernetes.io/zone=ap-northeast-2a -o jsonpath={.items[0].status.addresses[0].address})
 
 N2=$(kubectl get node --label-columns=topology.kubernetes.io/zone --selector=topology.kubernetes.io/zone=ap-northeast-2b -o jsonpath={.items[0].status.addresses[0].address})
@@ -48,28 +50,31 @@ echo "export N1=$N1" >> /etc/profile
 echo "export N2=$N2" >> /etc/profile
 
 echo "export N3=$N3" >> /etc/profile
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **작업용 인스턴스에서 노드로 보안 그룹 설정** </span>  
-{% highlight javascript linenos %}
+
+```shell
 NGSGID=$(aws ec2 describe-security-groups --filters Name=group-name,Values=*ng1* --query "SecurityGroups[*].[GroupId]" --output text)
 
 aws ec2 authorize-security-group-ingress --group-id $NGSGID --protocol '-1' --cidr 192.168.1.100/32
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **노드에 SSH 접근** </span>  
-{% highlight javascript linenos %}
+
+```shell
 for node in $N1 $N2 $N3; do ssh ec2-user@$node hostname; done
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **AWS Load Balancer Controller 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 helm repo add eks https://aws.github.io/eks-charts
 
 helm repo update
@@ -77,12 +82,13 @@ helm repo update
 helm install aws-load-balancer-controller eks/aws-load-balancer-controller -n kube-system --set clusterName=$CLUSTER_NAME \
   --set serviceAccount.create=false \
   --set serviceAccount.name=aws-load-balancer-controller
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **ExternalDNS 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 자신의 도메인 주소로 설정
 MyDomain=<자신의 도메인>
 
@@ -93,12 +99,13 @@ echo $MyDomain, $MyDnsHostedZoneId
 curl -s -O https://raw.githubusercontent.com/cloudneta/cnaeblab/master/_data/externaldns.yaml
 
 MyDomain=$MyDomain MyDnsHostedZoneId=$MyDnsHostedZoneId envsubst < externaldns.yaml | kubectl apply -f -
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **kube-ops-view 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 helm repo add geek-cookbook https://geek-cookbook.github.io/charts/
 
 helm install kube-ops-view geek-cookbook/kube-ops-view --version 1.2.2 --set env.TZ="Asia/Seoul" --namespace kube-system
@@ -108,19 +115,21 @@ kubectl patch svc -n kube-system kube-ops-view -p '{"spec":{"type":"LoadBalancer
 kubectl annotate service kube-ops-view -n kube-system "external-dns.alpha.kubernetes.io/hostname=kubeopsview.$MyDomain"
 
 echo -e "Kube Ops View URL = http://kubeopsview.$MyDomain:8080/#scale=1.5"
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **ACM 인증서 변수 선언** </span>  
-{% highlight javascript linenos %}
+
+```shell
 CERT_ARN=`aws acm list-certificates --query 'CertificateSummaryList[].CertificateArn[]' --output text`; echo $CERT_ARN
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **프로메테우스 스택 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 네임 스페이스 생성
 kubectl create ns monitoring
 
@@ -194,19 +203,21 @@ helm install kube-prometheus-stack prometheus-community/kube-prometheus-stack --
   --set prometheus.prometheusSpec.scrapeInterval='15s' \
   --set prometheus.prometheusSpec.evaluationInterval='15s' \
   -f monitor-values.yaml --namespace monitoring
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **메트릭 서버 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 kubectl apply -f https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/components.yaml
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **EKS Node View 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // go 설치
 yum install -y go
 
@@ -217,7 +228,7 @@ go install github.com/awslabs/eks-node-viewer/cmd/eks-node-viewer@v0.5.0
 cd ~/go/bin
 
 ./eks-node-viewer
-{% endhighlight %}
+```
 
 <br/>
 
@@ -231,7 +242,8 @@ cd ~/go/bin
 <br/>
 
 <span style='color:white; background-color:#404040'> **테스트용 php-apache 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 테스트용 php-apache 다운로드 및 확인
 curl -s -O https://raw.githubusercontent.com/kubernetes/website/main/content/en/examples/application/php-apache.yaml
 
@@ -242,35 +254,38 @@ kubectl apply -f php-apache.yaml
 
 // php-apache 동작 확인
 kubectl exec -it deploy/php-apache -- cat /var/www/html/index.php
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **모니터링 - 신규 터미널** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 모니터링 - 신규 터미널 (hpa, 파드 메트릭, 노드 메트릭)
 watch -d 'kubectl get hpa,pod;echo;kubectl top pod;echo;kubectl top node'
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **접속 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 PODIP=$(kubectl get pod -l run=php-apache -o jsonpath={.items[0].status.podIP})
 
 curl -s $PODIP; echo
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **HPA 생성** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // HPA 생성 - 파드의 요청 CPU의 50% 이상일 경우 스케일링 수행
 kubectl autoscale deployment php-apache --cpu-percent=50 --min=1 --max=10
 
 // HPA 확인
 kubectl describe hpa
-{% endhighlight %}
+```
 
 
 <br/>
@@ -287,10 +302,11 @@ kubectl describe hpa
 <br/>
 
 <span style='color:white; background-color:#404040'> **php-apache에 부하 발생** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 부하 발생 - scale-out 확인
 kubectl run -i --tty load-generator --rm --image=busybox:1.28 --restart=Never -- /bin/sh -c "while sleep 0.01; do wget -q -O- http://php-apache; done"
-{% endhighlight %}
+```
 
 <br/>
 
@@ -308,9 +324,10 @@ kubectl run -i --tty load-generator --rm --image=busybox:1.28 --restart=Never --
 <br/>
 
 <span style='color:white; background-color:#404040'> **실습 자원 삭제** </span>  
-{% highlight javascript linenos %}
+
+```shell
 kubectl delete deploy,svc,hpa,pod --all
-{% endhighlight %}
+```
 
 
 <br/>
@@ -328,18 +345,20 @@ kubectl delete deploy,svc,hpa,pod --all
 <br/>
 
 <span style='color:white; background-color:#404040'> **네임 스페이스 추가 및 모니터링 - 신규 터미널** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 네임 스페이스 추가
 kubectl create ns vpa
 
 // 모니터링 - 신규터미널 (VPA 생성 자원 확인)
 watch -d 'kubectl get pod -n vpa'
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **VPA 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // helm chart repository 추가
 helm repo add fairwinds-stable https://charts.fairwinds.com/stable
 
@@ -348,7 +367,7 @@ helm install vpa fairwinds-stable/vpa --namespace vpa
 
 // vpa crd 정보 확인
 kubectl get crd | grep autoscaling
-{% endhighlight %}
+```
 
 <br/>
 
@@ -360,16 +379,18 @@ kubectl get crd | grep autoscaling
 
 <span style='color:white; background-color:#404040'> **모니터링 - 신규 터미널** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 모니터링 - 신규 터미널 (파드 메트릭 수집)
 watch -d kubectl top pod
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **테스트용 자원 설치** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 테스트용 hamster 다운로드 및 확인
 curl -s -O https://raw.githubusercontent.com/cloudneta/cnaeblab/master/_data/hamster.yaml
 
@@ -377,19 +398,20 @@ cat hamster.yaml | yh
 
 // 테스트용 hamster 설치
 kubectl apply -f hamster.yaml && kubectl get vpa -w
-{% endhighlight %}  
+```  
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **VPA 동작 정보 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 파드 리소스 요구 사항 확인
 kubectl describe pod | grep Requests: -A2
 
 // VPA에 의해 파드 삭제 및 생성 이벤트 확인
 kubectl get events --sort-by=".metadata.creationTimestamp" | grep VPA
-{% endhighlight %}
+```
 
 <br/>
 
@@ -399,13 +421,14 @@ kubectl get events --sort-by=".metadata.creationTimestamp" | grep VPA
 <br/>
 
 <span style='color:white; background-color:#404040'> **실습 자원 삭제** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 테스트용 hamster 삭제
 kubectl delete -f hamster.yaml
 
 // VPA 삭제
 helm uninstall vpa -n vpa
-{% endhighlight %}
+```
 
 <br/>
 
@@ -422,7 +445,8 @@ helm uninstall vpa -n vpa
 <br/>
 
 <span style='color:white; background-color:#404040'> **ASG 확인 및 조정** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 현재 ASG 정보 확인
 aws autoscaling describe-auto-scaling-groups \
     --query "AutoScalingGroups[? Tags[? (Key=='eks:cluster-name') && Value=='myeks']].[AutoScalingGroupName, MinSize, MaxSize,DesiredCapacity]" \
@@ -437,12 +461,13 @@ aws autoscaling update-auto-scaling-group \
   --min-size 3 \
   --max-size 6 \
   --desired-capacity 3
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **CA 설치 및 확인** </span>
-{% highlight javascript linenos %}
+
+```shell
 // CA 설치 파일 다운로드 및 변수 치환
 curl -s -O https://raw.githubusercontent.com/kubernetes/autoscaler/master/cluster-autoscaler/cloudprovider/aws/examples/cluster-autoscaler-autodiscover.yaml
 
@@ -453,7 +478,7 @@ kubectl apply -f cluster-autoscaler-autodiscover.yaml
 
 // CA 확인
 kubectl get pod -n kube-system | grep cluster-autoscaler
-{% endhighlight %}
+```
 
 <br/>
 
@@ -463,7 +488,8 @@ kubectl get pod -n kube-system | grep cluster-autoscaler
 
 <span style='color:white; background-color:#404040'> **테스트용 자원 설치** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 테스트용 디플로이먼트 생성
 cat <<EoF> nginx.yaml
 apiVersion: apps/v1
@@ -498,13 +524,14 @@ kubectl apply -f nginx.yaml
 
 // 테스트용 디플로이먼트 정보 확인
 kubectl get deployment/nginx-to-scaleout
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **노드 scale-out 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // replica를 15로 조정 (scale-out 확인)
 kubectl scale --replicas=15 deployment/nginx-to-scaleout && date
 
@@ -512,13 +539,14 @@ kubectl scale --replicas=15 deployment/nginx-to-scaleout && date
 aws autoscaling describe-auto-scaling-groups \
     --query "AutoScalingGroups[? Tags[? (Key=='eks:cluster-name') && Value=='myeks']].[AutoScalingGroupName, MinSize, MaxSize,DesiredCapacity]" \
     --output table
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **노드 scale-in 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 테스트용 디플로이먼트 삭제 (scale-in 확인 - 10분 이상 소요)
 kubectl delete -f nginx.yaml && date
 
@@ -526,7 +554,7 @@ kubectl delete -f nginx.yaml && date
 aws autoscaling describe-auto-scaling-groups \
     --query "AutoScalingGroups[? Tags[? (Key=='eks:cluster-name') && Value=='myeks']].[AutoScalingGroupName, MinSize, MaxSize,DesiredCapacity]" \
     --output table
-{% endhighlight %}
+```
 
 <br/>
 
@@ -537,10 +565,11 @@ aws autoscaling describe-auto-scaling-groups \
 
 <span style='color:white; background-color:#404040'> **실습 자원 삭제** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // CA 삭제
 kubectl delete -f cluster-autoscaler-autodiscover.yaml
-{% endhighlight %}
+```
 
 <br/>
 
@@ -558,7 +587,8 @@ kubectl delete -f cluster-autoscaler-autodiscover.yaml
 
 <span style='color:white; background-color:#404040'> **실습 종료 후 자원 삭제** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // helm chart 삭제
 helm uninstall -n monitoring kube-prometheus-stack
 
@@ -567,7 +597,7 @@ helm uninstall -n kube-system kube-ops-view
 // Amazon EKS 원클릭 배포 삭제
 eksctl delete cluster --name $CLUSTER_NAME \
   && aws cloudformation delete-stack --stack-name $CLUSTER_NAME
-{% endhighlight %}
+```
 
 <br/>
 
