--- a/_posts/AWS/2023-09-03-CH2-4.md
+++ b/_posts/AWS/2023-09-03-CH2-4.md
@@ -12,7 +12,7 @@ tags: [eks, 2장]
 <!--more-->
 <!-- Table of contents -->
 * this unordered seed list will be replaced by the toc
-  {:toc}
+{:toc}
 
 
 ## 1. ExternalDNS 배포
@@ -30,14 +30,16 @@ tags: [eks, 2장]
 <br/>
 
 <span style='color:white; background-color:#404040'> **Default 네임 스페이스 변경** </span>  
-{% highlight javascript linenos %}
+
+```shell
 kubectl ns default
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **워커 노드의 IP 변수 선언** </span>  
-{% highlight javascript linenos %}
+
+```shell
 N1=$(kubectl get node --label-columns=topology.kubernetes.io/zone --selector=topology.kubernetes.io/zone=ap-northeast-2a -o jsonpath={.items[0].status.addresses[0].address})
 
 N2=$(kubectl get node --label-columns=topology.kubernetes.io/zone --selector=topology.kubernetes.io/zone=ap-northeast-2b -o jsonpath={.items[0].status.addresses[0].address})
@@ -49,12 +51,13 @@ echo "export N1=$N1" >> /etc/profile
 echo "export N2=$N2" >> /etc/profile
 
 echo "export N3=$N3" >> /etc/profile
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **kube-ops-view 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // kube-ops-view 설치
 helm repo add geek-cookbook https://geek-cookbook.github.io/charts/
 
@@ -64,18 +67,19 @@ kubectl patch svc -n kube-system kube-ops-view -p '{"spec":{"type":"LoadBalancer
 
 // kube-ops-view 접속 URL 확인 (1.5 배율)
 kubectl get svc -n kube-system kube-ops-view -o jsonpath={.status.loadBalancer.ingress[0].hostname} | awk '{ print "KUBE-OPS-VIEW URL = http://"$1":8080/#scale=1.5"}'
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **AWSLoadBalancerControllerIAMPolicy 생성** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // IAM Policy json 파일 다운로드
 curl -o iam_policy.json https://raw.githubusercontent.com/kubernetes-sigs/aws-load-balancer-controller/v2.4.7/docs/install/iam_policy.json
 
 // AWSLoadBalancerControllerIAMPolicy 생성
 aws iam create-policy --policy-name AWSLoadBalancerControllerIAMPolicy --policy-document file://iam_policy.json
-{% endhighlight %}
+```
 
 {: .box-note}
 **Note:** 이미 AWSLoadBalancerControllerIAMPolicy가 존재하면 해당 작업은 스킵합니다. 존재한 상태에서 명령을 입력하면 중복된 정책에 따른 Error 메시지가 출력되나 무시하고 다음 작업을 진행합니다.
@@ -83,7 +87,8 @@ aws iam create-policy --policy-name AWSLoadBalancerControllerIAMPolicy --policy-
 <br/>
 
 <span style='color:white; background-color:#404040'> **IRSA 생성** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // IRSA 생성
 eksctl create iamserviceaccount \
   --cluster=$CLUSTER_NAME \
@@ -92,12 +97,13 @@ eksctl create iamserviceaccount \
   --attach-policy-arn=arn:aws:iam::$ACCOUNT_ID:policy/AWSLoadBalancerControllerIAMPolicy \
   --override-existing-serviceaccounts \
   --approve
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **AWS Load Balancer Controller 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // Helm Chart Repository 추가 및 업데이트
 helm repo add eks https://aws.github.io/eks-charts
 helm repo update
@@ -107,7 +113,7 @@ helm install aws-load-balancer-controller eks/aws-load-balancer-controller -n ku
   --set clusterName=$CLUSTER_NAME \
   --set serviceAccount.create=false \
   --set serviceAccount.name=aws-load-balancer-controller
-{% endhighlight %}
+```
 
 <br/>
 
@@ -123,7 +129,8 @@ helm install aws-load-balancer-controller eks/aws-load-balancer-controller -n ku
 <br/>
 
 <span style='color:white; background-color:#404040'> **도메인 변수 선언** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 도메인 주소 변수 지정
 MyDomain=<자신의 도메인>
 
@@ -140,12 +147,13 @@ MyDnsHostedZoneId=`aws route53 list-hosted-zones-by-name --dns-name "${MyDomain}
 echo "export MyDnsHostedZoneId=$MyDnsHostedZoneId" >> /etc/profile
 
 echo $MyDnsHostedZoneId
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **도메인 레코드 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // NS 레코드 조회
 aws route53 list-resource-record-sets \
   --output json --hosted-zone-id "${MyDnsHostedZoneId}" \
@@ -161,7 +169,7 @@ while true; do aws route53 list-resource-record-sets \
   --hosted-zone-id "${MyDnsHostedZoneId}" \
   --query "ResourceRecordSets[?Type == 'A'].Name" \
   --output text ; date ; echo ; sleep 1; done
-{% endhighlight %}
+```
 
 <br/><br/>
 
@@ -174,19 +182,21 @@ while true; do aws route53 list-resource-record-sets \
 <br/>
 
 <span style='color:white; background-color:#404040'> **external-dns-access 옵션 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // eksctl create cluster 옵션 확인
 eksctl create cluster --help
 
 // myeks.yaml 확인
 cat myeks.yaml | yh
-{% endhighlight %}
+```
 
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **ExternalDNS 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // yaml 파일 다운로드 및 확인
 curl -s -O https://raw.githubusercontent.com/cloudneta/cnaeblab/master/_data/externaldns.yaml
 
@@ -197,15 +207,16 @@ MyDomain=$MyDomain MyDnsHostedZoneId=$MyDnsHostedZoneId envsubst < externaldns.y
 
 // ExternalDNS 확인
 kubectl get pod -l app.kubernetes.io/name=external-dns -n kube-system
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **신규 터미널 - ExternalDNS 로그 모니터링** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // ExternalDNS 로그 모니터링
 kubectl logs deploy/external-dns -n kube-system -f
-{% endhighlight %}
+```
 
 <br/>
 
@@ -226,15 +237,17 @@ kubectl logs deploy/external-dns -n kube-system -f
 <br/>
 
 <span style='color:white; background-color:#404040'> **신규 터미널 - 파드, 서비스 모니터링** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 파드, 서비스 모니터링
 watch -d kubectl get pod,svc
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **디플로이먼트(게임 파드 2대) & 서비스(NLB) 생성** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // yaml 파일 다운로드 및 확인
 curl -s -O https://raw.githubusercontent.com/cloudneta/cnaeblab/master/_data/tetris.yaml
 
@@ -242,7 +255,7 @@ cat tetris.yaml | yh
 
 // 디플로이먼트 & 서비스 배포
 kubectl apply -f tetris.yaml
-{% endhighlight %}
+```
 
 <br/>
 
@@ -253,16 +266,18 @@ kubectl apply -f tetris.yaml
 <br/>
 
 <span style='color:white; background-color:#404040'> **NLB에 ExternalDNS로 연결** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // NLB에 ExternalDNS 연결
 kubectl annotate service tetris "external-dns.alpha.kubernetes.io/hostname=tetris.$MyDomain"
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **도메인 주소 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // dig 명령으로 도메인 주소 확인
 dig +short tetris.$MyDomain
 
@@ -272,15 +287,16 @@ echo -e "My Domain Checker = https://www.whatsmydns.net/#A/tetris.$MyDomain"
 
 // Tetris 웹 접속 주소 확인
 echo -e "Tetris Game URL = http://tetris.$MyDomain"
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **kube-ops-view에 ExternalDNS로 연결** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // NLB에 ExternalDNS 연결
 kubectl annotate service kube-ops-view -n kube-system "external-dns.alpha.kubernetes.io/hostname=kubeopsview.$MyDomain"
-{% endhighlight %}
+```
 
 <br/>
 
@@ -298,24 +314,27 @@ kubectl annotate service kube-ops-view -n kube-system "external-dns.alpha.kubern
 <br/>
 
 <span style='color:white; background-color:#404040'> **디플로이먼트 & 서비스 삭제** </span>  
-{% highlight javascript linenos %}
+
+```shell
 kubectl delete deploy,svc tetris
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **kube-ops-view 삭제** </span>  
-{% highlight javascript linenos %}
+
+```shell
 helm uninstall kube-ops-view -n kube-system
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **Amazon EKS 원클릭 배포 삭제** </span>
-{% highlight javascript linenos %}
+
+```shell
 eksctl delete cluster --name $CLUSTER_NAME \
   && aws cloudformation delete-stack --stack-name $CLUSTER_NAME
-{% endhighlight %}
+```
 
 <br/>
 
