--- a/_posts/AWS/2023-09-15-CH4-1.md
+++ b/_posts/AWS/2023-09-15-CH4-1.md
@@ -12,7 +12,7 @@ tags: [eks, 4장]
 <!--more-->
 <!-- Table of contents -->
 * this unordered seed list will be replaced by the toc
-  {:toc}
+{:toc}
 
 
 ## 1. Amazon EKS 원클릭 배포
@@ -95,15 +95,17 @@ Amazon EKS 원클릭으로 배포된 기본 정보와 설정을 진행합니다.
 <br/>
 
 <span style='color:white; background-color:#404040'> **Default Namespace로 적용** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // Default Namespace로 위치 변경
 kubectl ns default
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **노드의 프라이빗 IP 변수 선언** </span>  
-{% highlight javascript linenos %}
+
+```shell
 //  3대의 워커노드의 Private IP 주소 변수 저장
 N1=$(kubectl get node --label-columns=topology.kubernetes.io/zone --selector=topology.kubernetes.io/zone=ap-northeast-2a -o jsonpath={.items[0].status.addresses[0].address})
 
@@ -119,37 +121,40 @@ echo "export N2=$N2" >> /etc/profile
 echo "export N3=$N3" >> /etc/profile
 
 echo $N1, $N2, $N3
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **작업용 인스턴스에서 노드로 보안 그룹 설정** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 노드 보안 그룹 ID를 변수 선언
 NGSGID=$(aws ec2 describe-security-groups --filters Name=group-name,Values=*ng1* --query "SecurityGroups[*].[GroupId]" --output text)
 
 // 노드 보안 그룹에 정책 추가 - 작업용 인스턴스에서 노드로 모든 통신 허용
 aws ec2 authorize-security-group-ingress --group-id $NGSGID --protocol '-1' --cidr 192.168.1.100/32
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **EFS 마운트 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // NFS4로 마운트 된 디스크 확인
 df -hT --type nfs4
 
 // 만약 마운트가 되지 않는다면..
 mount -t nfs4 -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport $EFS_ID.efs.ap-northeast-2.amazonaws.com:/ /mnt/myefs
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **워커 노드 SSH 접근 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // N1, N2, N3 워커 노드에 SSH 접속 후 hostname 명령어 수행
 for node in $N1 $N2 $N3; do ssh ec2-user@$node hostname; done
-{% endhighlight %}
+```
 
 <br/>
 
@@ -163,7 +168,8 @@ for node in $N1 $N2 $N3; do ssh ec2-user@$node hostname; done
 
 <span style='color:white; background-color:#404040'> **AWS Load Balancer Controller 설치** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 helm repo add eks https://aws.github.io/eks-charts
 
 helm repo update
@@ -171,13 +177,14 @@ helm repo update
 helm install aws-load-balancer-controller eks/aws-load-balancer-controller -n kube-system --set clusterName=$CLUSTER_NAME \
   --set serviceAccount.create=false \
   --set serviceAccount.name=aws-load-balancer-controller
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **ExternalDNS 설치** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 MyDomain=<자신의 도메인>
 
 MyDnsHostedZoneId=$(aws route53 list-hosted-zones-by-name --dns-name "${MyDomain}." --query "HostedZones[0].Id" --output text)
@@ -187,13 +194,14 @@ echo $MyDomain, $MyDnsHostedZoneId
 curl -s -O https://raw.githubusercontent.com/cloudneta/cnaeblab/master/_data/externaldns.yaml
 
 MyDomain=$MyDomain MyDnsHostedZoneId=$MyDnsHostedZoneId envsubst < externaldns.yaml | kubectl apply -f -
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **kube-ops-view 설치** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 helm repo add geek-cookbook https://geek-cookbook.github.io/charts/
 
 helm install kube-ops-view geek-cookbook/kube-ops-view --version 1.2.2 --set env.TZ="Asia/Seoul" --namespace kube-system
@@ -203,13 +211,14 @@ kubectl patch svc -n kube-system kube-ops-view -p '{"spec":{"type":"LoadBalancer
 kubectl annotate service kube-ops-view -n kube-system "external-dns.alpha.kubernetes.io/hostname=kubeopsview.$MyDomain"
 
 echo -e "Kube Ops View URL = http://kubeopsview.$MyDomain:8080/#scale=1.5"
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **스토리지 클래스 생성** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 스토리지 클래스 생성을 위한 gp3-sc.yaml 파일 만들기
 cat <<EOT > gp3-sc.yaml
 kind: StorageClass
@@ -230,19 +239,20 @@ kubectl apply -f gp3-sc.yaml
 
 // 스토리지 클래스 확인
 kubectl get sc
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **AWS Cert Manager 인증서 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // ACM 인증서 확인
 aws acm list-certificates
 
 // ACM 인증서 변수 선언
 CERT_ARN=`aws acm list-certificates --query 'CertificateSummaryList[].CertificateArn[]' --output text`; echo $CERT_ARN
-{% endhighlight %}
+```
 
 <br/>
 
@@ -253,13 +263,14 @@ CERT_ARN=`aws acm list-certificates --query 'CertificateSummaryList[].Certificat
 <br/>
 
 <span style='color:white; background-color:#404040'> **ACM 인증서 생성** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // ACM 인증서 신규 생성
 aws acm request-certificate \
   --domain-name *.${MyDomain} \
   --validation-method DNS \
   --options CertificateTransparencyLoggingPreference=DISABLED
-{% endhighlight %}
+```
 
 <br/>
 
@@ -272,13 +283,14 @@ aws acm request-certificate \
 <br/>
 
 <span style='color:white; background-color:#404040'> **ACM 인증서 확인 및 변수 선언** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // ACM 인증서 확인
 aws acm list-certificates
 
 // ACM 인증서 변수 선언
 CERT_ARN=`aws acm list-certificates --query 'CertificateSummaryList[].CertificateArn[]' --output text`; echo $CERT_ARN
-{% endhighlight %}
+```
 
 <br/>
 
@@ -289,7 +301,8 @@ CERT_ARN=`aws acm list-certificates --query 'CertificateSummaryList[].Certificat
 
 <span style='color:white; background-color:#404040'> **설치 정보 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 이미지 정보 확인
 kubectl get pods --all-namespaces -o jsonpath="{.items[*].spec.containers[*].image}" | tr -s '[[:space:]]' '\n' | sort | uniq -c
 
@@ -298,7 +311,7 @@ eksctl get addon --cluster $CLUSTER_NAME
 
 // IRSA 확인
 eksctl get iamserviceaccount --cluster $CLUSTER_NAME
-{% endhighlight %}
+```
 
 
 <br/>
@@ -317,14 +330,15 @@ Amazon EKS 원클릭을 통해 배포된 모든 자원을 삭제합니다.
 
 <span style='color:white; background-color:#404040'> **Amazon EKS 원클릭 배포의 삭제** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // kube-ops-view 삭제
 helm uninstall -n kube-system kube-ops-view
 
 // Amazon EKS 원클릭 배포의 삭제
 eksctl delete cluster --name $CLUSTER_NAME \
   && aws cloudformation delete-stack --stack-name $CLUSTER_NAME
-{% endhighlight %}
+```
 
 {: .box-warning}
 **Warning:** Amazon EKS 원클릭 배포의 삭제는 약 15분 정도 소요됩니다. 삭제가 완료될 때 까지 SSH 연결 세션을 유지합니다.
