--- a/_posts/AWS/2023-09-16-CH4-2.md
+++ b/_posts/AWS/2023-09-16-CH4-2.md
@@ -12,7 +12,7 @@ tags: [eks, 4장]
 <!--more-->
 <!-- Table of contents -->
 * this unordered seed list will be replaced by the toc
-  {:toc}
+{:toc}
 
 
 ## 1. Control Plane 로깅 확인
@@ -30,14 +30,16 @@ tags: [eks, 4장]
 <br/>
 
 <span style='color:white; background-color:#404040'> **Default 네임 스페이스 변경** </span>  
-{% highlight javascript linenos %}
+
+```shell
 kubectl ns default
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **워커 노드의 IP 변수 선언** </span>  
-{% highlight javascript linenos %}
+
+```shell
 N1=$(kubectl get node --label-columns=topology.kubernetes.io/zone --selector=topology.kubernetes.io/zone=ap-northeast-2a -o jsonpath={.items[0].status.addresses[0].address})
 
 N2=$(kubectl get node --label-columns=topology.kubernetes.io/zone --selector=topology.kubernetes.io/zone=ap-northeast-2b -o jsonpath={.items[0].status.addresses[0].address})
@@ -49,19 +51,21 @@ echo "export N1=$N1" >> /etc/profile
 echo "export N2=$N2" >> /etc/profile
 
 echo "export N3=$N3" >> /etc/profile
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **노드에 SSH 접근** </span>  
-{% highlight javascript linenos %}
+
+```shell
 for node in $N1 $N2 $N3; do ssh ec2-user@$node hostname; done
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **AWS Load Balancer Controller 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 helm repo add eks https://aws.github.io/eks-charts
 
 helm repo update
@@ -69,12 +73,13 @@ helm repo update
 helm install aws-load-balancer-controller eks/aws-load-balancer-controller -n kube-system --set clusterName=$CLUSTER_NAME \
   --set serviceAccount.create=false \
   --set serviceAccount.name=aws-load-balancer-controller
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **ExternalDNS 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 자신의 도메인 주소로 설정
 MyDomain=<자신의 도메인>
 
@@ -85,12 +90,13 @@ echo $MyDomain, $MyDnsHostedZoneId
 curl -s -O https://raw.githubusercontent.com/cloudneta/cnaeblab/master/_data/externaldns.yaml
 
 MyDomain=$MyDomain MyDnsHostedZoneId=$MyDnsHostedZoneId envsubst < externaldns.yaml | kubectl apply -f -
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **kube-ops-view 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 helm repo add geek-cookbook https://geek-cookbook.github.io/charts/
 
 helm install kube-ops-view geek-cookbook/kube-ops-view --version 1.2.2 --set env.TZ="Asia/Seoul" --namespace kube-system
@@ -100,12 +106,13 @@ kubectl patch svc -n kube-system kube-ops-view -p '{"spec":{"type":"LoadBalancer
 kubectl annotate service kube-ops-view -n kube-system "external-dns.alpha.kubernetes.io/hostname=kubeopsview.$MyDomain"
 
 echo -e "Kube Ops View URL = http://kubeopsview.$MyDomain:8080/#scale=1.5"
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **StorageClass 생성** </span>  
-{% highlight javascript linenos %}
+
+```shell
 cat <<EOT > gp3-sc.yaml
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
@@ -121,14 +128,15 @@ parameters:
 EOT
 
 kubectl apply -f gp3-sc.yaml
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **ACM 인증서 변수 선언** </span>  
-{% highlight javascript linenos %}
+
+```shell
 CERT_ARN=`aws acm list-certificates --query 'CertificateSummaryList[].CertificateArn[]' --output text`; echo $CERT_ARN
-{% endhighlight %}
+```
 
 <br/>
 
@@ -142,23 +150,25 @@ CERT_ARN=`aws acm list-certificates --query 'CertificateSummaryList[].Certificat
 <br/>
 
 <span style='color:white; background-color:#404040'> **Amazon EKS Control Plane 로깅 활성화** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // Amazon EKS Control Plane 로깅 활성화 설정
 aws eks update-cluster-config --region $AWS_DEFAULT_REGION --name $CLUSTER_NAME \
   --logging '{"clusterLogging":[{"types":["api","audit","authenticator","controllerManager","scheduler"],"enabled":true}]}'
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **로그 그룹 및 로그 스트림 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // CloudWatch의 로그 그룹 생성 확인
 aws logs describe-log-groups | jq
 
 // 로그 그룹에 구성된 로그 스트림 확인
 aws logs describe-log-streams \
   --log-group-name /aws/eks/${CLUSTER_NAME}/cluster | grep logStreamName
-{% endhighlight %}
+```
 
 <br/><br/>
 
@@ -168,7 +178,8 @@ aws logs describe-log-streams \
 <br/>
 
 <span style='color:white; background-color:#404040'> **awscli로 Control Plane 로그 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // 10분 동안 Control Plane 로그 확인(more 옵션)
 aws logs tail /aws/eks/$CLUSTER_NAME/cluster | more
 
@@ -182,7 +193,7 @@ aws logs tail /aws/eks/$CLUSTER_NAME/cluster --log-stream-name-prefix kube-contr
 kubectl scale deployment -n kube-system coredns --replicas=1
 
 kubectl scale deployment -n kube-system coredns --replicas=2
-{% endhighlight %}
+```
 
 <br/>
 
@@ -190,7 +201,8 @@ kubectl scale deployment -n kube-system coredns --replicas=2
 Select up to 50 log groups에 생성한 로그 그룹을 선택 후 다음 작업을 수행합니다.
 
 <span style='color:white; background-color:#404040'> **CloudWatch 로그 인사이트에서 쿼리하기** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // kube-apiserver-audit 로그에서 UserAgent 정렬 후 카운트 값
 fields userAgent, requestURI, @timestamp, @message
 | filter @logStream ~= "kube-apiserver-audit"
@@ -206,7 +218,7 @@ fields @timestamp, @message
 fields @timestamp, @message
 | filter @logStream ~= "authenticator"
 | sort @timestamp desc
-{% endhighlight %}
+```
 
 <br/><br/>
 
@@ -216,7 +228,8 @@ fields @timestamp, @message
 <br/>
 
 <span style='color:white; background-color:#404040'> **Control Plane 로깅 비활성화** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // EKS Control Plane 로깅 비활성화
 eksctl utils update-cluster-logging \
   --cluster $CLUSTER_NAME \
@@ -226,7 +239,7 @@ eksctl utils update-cluster-logging \
 
 // Control Plane 로그 그룹 삭제
 aws logs delete-log-group --log-group-name /aws/eks/$CLUSTER_NAME/cluster
-{% endhighlight %}
+```
 
 <br/>
 
@@ -246,7 +259,8 @@ aws logs delete-log-group --log-group-name /aws/eks/$CLUSTER_NAME/cluster
 <br/>
 
 <span style='color:white; background-color:#404040'> **Helm으로 bitnami nginx 설치** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // helm repository 추가
 helm repo add bitnami https://charts.bitnami.com/bitnami
 
@@ -274,18 +288,19 @@ cat nginx-values.yaml | yh
 
 // nginx 배포
 helm install nginx bitnami/nginx --version 14.1.0 -f nginx-values.yaml
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **생성 정보 확인** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // ingress, deployment, service, endpoint nginx 확인
 kubectl get ingress,deploy,svc,ep nginx
 
 // alb targetgroupbinding 확인
 kubectl get targetgroupbindings
-{% endhighlight %}
+```
 
 <br/>
 
@@ -297,7 +312,8 @@ kubectl get targetgroupbindings
 
 <span style='color:white; background-color:#404040'> **HTTP, HTTPS 접속 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // HTTPS로 접속
 curl -s https://nginx.$MyDomain
 
@@ -314,19 +330,20 @@ curl -L http://nginx.$MyDomain
 MyDomain = <자신의 도메인>
 
 while true; do curl -s https://nginx.$MyDomain -I | head -n 1; date; sleep 1; done
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **컨테이너 로그 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 컨테이너 로그 확인
 kubectl logs deploy/nginx -c nginx -f
 
 // 컨테이너 로그 파일 위치 확인
 kubectl exec -it deploy/nginx -c nginx -- ls -l /opt/bitnami/nginx/logs/
-{% endhighlight %}  
+```  
 
 [bitnami nginx 빌드 정보 링크](https://github.com/bitnami/containers/blob/main/bitnami/nginx/1.25/debian-11/Dockerfile#L45-L46){:target="_blank"}에서 access.log와 error.log 정보를 확인합니다.
 
@@ -334,7 +351,8 @@ kubectl exec -it deploy/nginx -c nginx -- ls -l /opt/bitnami/nginx/logs/
 
 <span style='color:white; background-color:#404040'> **노드에서 컨테이너 로그 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // /var/log/containers tree 확인 (nginx 파드가 생성된 노드 지정)
 ssh ec2-user@$N1 sudo tree -C /var/log/containers
 
@@ -345,15 +363,16 @@ ssh ec2-user@$N1 sudo tree -C /var/log/pods
 ssh ec2-user@$N1 sudo tail -f <XXXXXXXXX>
 
 ssh ec2-user@$N1 sudo head <XXXXXXXXX>
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **kubelet의 컨테이너 로그 최대 사이즈** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 ssh ec2-user@$N1 journalctl -u kubelet | grep FLAG | grep container-log-max
-{% endhighlight %}
+```
 
 <br/>
 
@@ -370,19 +389,21 @@ ssh ec2-user@$N1 journalctl -u kubelet | grep FLAG | grep container-log-max
 <br/>
 
 <span style='color:white; background-color:#404040'> **Application 로그 소스** </span>  
-{% highlight javascript linenos %}
+
+```shell
 // application 로그 소스 확인
 for node in $N1 $N2 $N3; do echo ">>>>> $node <<<<<"; \
 ssh ec2-user@$node sudo tree /var/log/containers; echo; done
 
 for node in $N1 $N2 $N3; do echo ">>>>> $node <<<<<"; \
 ssh ec2-user@$node sudo tree /var/log/pods; echo; done
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **Host 로그 소스** </span>
-{% highlight javascript linenos %}
+
+```shell
 // host 로그 소스 (Logs from /var/log/dmesg, /var/log/secure, and /var/log/messages), 노드(호스트) 로그
 for node in $N1 $N2 $N3; do echo ">>>>> $node <<<<<"; \
 ssh ec2-user@$node sudo tree /var/log/ -L 1; echo; done
@@ -390,12 +411,13 @@ ssh ec2-user@$node sudo tree /var/log/ -L 1; echo; done
 // 노드 1에 dmesg, secure, messages 로그 확인
 for log in dmesg secure messages; do echo ">>>>> Node1: /var/log/$log <<<<<"; \
 ssh ec2-user@$N1 sudo tail /var/log/$log; echo; done
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **Dataplane 로그 소스** </span>
-{% highlight javascript linenos %}
+
+```shell
 // dataplane 로그 소스(/var/log/journal for kubelet.service, kubeproxy.service, and docker.service), 쿠버네티스 데이터플레인 로그
 for node in $N1 $N2 $N3; do echo ">>>>> $node <<<<<"; \
 ssh ec2-user@$node sudo tree /var/log/journal -L 1; echo; done
@@ -404,7 +426,7 @@ ssh ec2-user@$node sudo tree /var/log/journal -L 1; echo; done
 ssh ec2-user@$N3 sudo journalctl -u kubelet -x -n 200
 
 ssh ec2-user@$N3 sudo journalctl -u kubelet -f
-{% endhighlight %}
+```
 
 <br/>
 
@@ -414,19 +436,21 @@ ssh ec2-user@$N3 sudo journalctl -u kubelet -f
 
 <span style='color:white; background-color:#404040'> **네임 스페이스 생성** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // 네임스페이스 생성
 kubectl apply -f https://raw.githubusercontent.com/aws-samples/amazon-cloudwatch-container-insights/latest/k8s-deployment-manifest-templates/deployment-mode/daemonset/container-insights-monitoring/cloudwatch-namespace.yaml
 
 // 네임스페이스 확인
 kubectl get ns
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **FluentBit ConfigMap 생성** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // Fluent-bit ConfigMap 생성
 FluentBitHttpServer='On'
 FluentBitHttpPort='2020'
@@ -440,45 +464,48 @@ kubectl create configmap fluent-bit-cluster-info \
 --from-literal=read.head=${FluentBitReadFromHead} \
 --from-literal=read.tail=${FluentBitReadFromTail} \
 --from-literal=logs.region=${AWS_DEFAULT_REGION} -n amazon-cloudwatch
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **FluentBit 생성** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // Fluentbit 생성
 kubectl apply -f https://raw.githubusercontent.com/aws-samples/amazon-cloudwatch-container-insights/latest/k8s-deployment-manifest-templates/deployment-mode/daemonset/container-insights-monitoring/fluent-bit/fluent-bit.yaml
 
 // 설치 확인
 kubectl get ds,pod,cm,sa -n amazon-cloudwatch
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **FluentBit ConfigMap 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // FluentBit Configmap 확인
 kubectl get cm fluent-bit-cluster-info -n amazon-cloudwatch -o yaml | yh
 
 // FluentBit Configmap 상세 - 로그 INPUT/FILTER/OUTPUT 설정 확인
 /// 설정 구성 : application-log.conf, dataplane-log.conf, fluent-bit.conf, host-log.conf, parsers.conf
 kubectl describe cm fluent-bit-config -n amazon-cloudwatch
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **FluentBit DaemonSet 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // FluentBit Daemonset 
 /// 파드가 수집하는 방법 : Volumes에 HostPath 확인
 kubectl describe ds fluent-bit -n amazon-cloudwatch
 
 // /var/log에 tree 확인
 ssh ec2-user@$N1 sudo tree /var/log
-{% endhighlight %}
+```
 
 
 <br/>
@@ -489,19 +516,21 @@ ssh ec2-user@$N1 sudo tree /var/log
 
 <span style='color:white; background-color:#404040'> **신규 터미널 모니터링** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 kubectl logs deploy/nginx -f
-{% endhighlight %}
+```
 
 <br/>
 
 <span style='color:white; background-color:#404040'> **부하 발생** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 yum install -y httpd
 
 ab -c 500 -n 30000 https://nginx.$MyDomain/
-{% endhighlight %}  
+```  
 
 관리 콘솔에 CloudWatch 로그 그룹에서 application 로그 그룹을 선택 --> 로그 스트림 필터링 nginx --> ApacheBench 필터링 후 확인합니다.
 
@@ -509,7 +538,8 @@ ab -c 500 -n 30000 https://nginx.$MyDomain/
 
 <span style='color:white; background-color:#404040'> **Log Insight 정보 확인** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // Log Insight 컨테이너 이름별 애플리케이션 로그 오류 카운트
 // 로그 그룹 선택 : /aws/containerinsights/<CLUSTER_NAME>/application
 stats count() as error_count by kubernetes.container_name 
@@ -524,7 +554,7 @@ kubectl exec deploy/nginx -c nginx -- kill -s SIGINT 1
 fields @timestamp, @message, ec2_instance_id
 | filter  message like 'level=error' or message like 'level=warning' 
 | stats count(*) as error_count by ec2_instance_id
-{% endhighlight %}
+```
 
 <br/>
 
@@ -534,7 +564,8 @@ fields @timestamp, @message, ec2_instance_id
 
 <span style='color:white; background-color:#404040'> **실습 종료 후 자원 삭제** </span>
 
-{% highlight javascript linenos %}
+
+```shell
 // fluent-bit 삭제
 kubectl delete ds fluent-bit -n amazon-cloudwatch && kubectl delete cm fluent-bit-cluster-info -n amazon-cloudwatch && kubectl delete cm fluent-bit-config -n amazon-cloudwatch && kubectl delete sa fluent-bit -n amazon-cloudwatch
 
@@ -546,7 +577,7 @@ aws logs delete-log-group --log-group-name /aws/containerinsights/$CLUSTER_NAME/
 aws logs delete-log-group --log-group-name /aws/containerinsights/$CLUSTER_NAME/dataplane
 aws logs delete-log-group --log-group-name /aws/containerinsights/$CLUSTER_NAME/host
 aws logs delete-log-group --log-group-name /aws/containerinsights/$CLUSTER_NAME/performance
-{% endhighlight %}
+```
 
 <br/>
 
